update(header): 홈페이지로 가는 로고 추가

--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -110,7 +110,7 @@ section {
 
 body {
   font-family: 'Nanum Gothic Coding', monospace;
-  background-color: #fff8e7;
+  background-color: #99958b;
   font-size: 10px;
   line-height: 1;
 }
